Revert "Revert "Revert "fix: safari z-index problem"""
This reverts commit 170386efd620a9e72f4fba3d42724e48af0da5c6.

--- a/packages/webgal/src/Components/UI/Title/title.module.scss
+++ b/packages/webgal/src/Components/UI/Title/title.module.scss
@@ -3,7 +3,6 @@
   height: 100%;
   position: absolute;
   z-index: 13;
-  transform: translateZ(13px);
 }
 
 .Title_buttonList {
